--- a/style.css
+++ b/style.css
@@ -3,26 +3,24 @@ h1 {
     font-weight: 100;
     font-style: initial;
 }
-
 h2 {
     color: #fff000;
     font-weight: 100;
     font-style: initial;
 }
-
 h3 {
     color: #ecc148;
 }
-
 h4 {
     color: #d34309;
 }
-
 table {
     color: #000000;
 }
-
 p {
     font-weight: 300;
     font-style: initial;
+}
+body {
+    background-color: whitesmoke;
 }
