--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,4 @@
-﻿
+
              h1 
              {
                  color: #ff8c00;
@@ -28,7 +28,7 @@
              }
              body 
              {
-                 background-color: whitesmoke;
+                 background-color: white;
              }
              table 
              {
